added support for mac os